--- a/projects/hello-world/contracts/Makefile
+++ b/projects/hello-world/contracts/Makefile
@@ -2,8 +2,8 @@
 .phony: deploy
 
 # anvil's third default address
-sender := 0x5de4111afa1a4b94908f83103eb1f1706367c2e68ca870fc3fb9a804cdab365a
-RPC_URL := http://localhost:8545
+sender := 0xpv-key
+RPC_URL := 0x3B1554f346DFe5c482Bb4BA31b880c1C18412170
 
 # deploying the contract
 deploy:
