--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "projects/payment/contracts/lib/infernet-sdk"]
 	path = projects/payment/contracts/lib/infernet-sdk
 	url = https://github.com/ritual-net/infernet-sdk
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
